--- a/.env
+++ b/.env
@@ -2,6 +2,8 @@ GOOGLE_ID = 671377783786-5pmm9p33ce46c47737s6vedfm4ulgtk7.apps.googleusercontent
 GOOGLE_CLIENT_SECRET = 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
 MONGODB_URI = mongodb+srv://omaiduothniel:Chickenpie2471.@cluster0.30xatul.mongodb.net/?retryWrites=true&w=majority
 
-NEXTAUTH_URL= http://localhost:3000
-NEXTAUTH_URL_INTERNAL= http://localhost:3000
+# NEXTAUTH_URL= http://localhost:3000
+# NEXTAUTH_URL_INTERNAL= http://localhost:3000
+NEXTAUTH_URL= https://promptopia-alpha-vert.vercel.app/
+NEXTAUTH_URL_INTERNAL= https://promptopia-alpha-vert.vercel.app/
 NEXTAUTH_SECRET = qLsR6zS8BocMVnbKit71pxZjBcTZWfI6rizRWZ2UjUQ=
